Changelog for Shake

    Add Chatty verbosity, for what was Loud
    Make repeated --verbose keep increasing the verbosity
    If shakeThreads==1 then always use a deterministic pool
    Add shakeLineBuffering, defaulting to True
    Improve the performance of profiling
    Documentation and corrections improvements
    Eliminate StepKey from the profiling output
    Add a --no-time flag
    Makefile improvements
    Avoid use of ghc-options in .cabal file
0.10.1
    Allow the shake executable to build
0.10
    Add phony, for writing phony actions
    Add removeFilesAfter
    Switch to the new profiling code
    Add actionOnException and actionFinally
    Add shakeArgsWith
    Rename shakeWithArgs to shakeArgs and change the clean argument
    Remove the -f alias for --flush
    Add a shake executable which runs Makefiles
    Rename shake to shake-test
    Change how progress messages are written
    Do not write a beep in progressDisplay, avoids a beep
    Add exe function to FilePath
0.9.1
    GHC head (7.7) compatibility by removing the Rules fundep
0.9
    Make the tests work on Linux
    Fix report generation on machines whose text format is not ASCII
    Make Directory functions work the same on Linux/Mac
    Change shakeVersion to be a String
    Stop alwaysRerun causing lint failures
    Make shakeLint check that the current directory does not change
    Add shakeOutput setting
    Add removeFiles function
    Add Sys module for writing consise system calls
    Add getEnv function
    Add shakeWithArgs and shakeOptDescrs
    Add newCache to cache the parsed contents of files
    Add newResourceIO and move newResource into the Rules monad
    Add shakeStorageLog, to help diagnosing obscure database errors
0.8
    Improve the Oracle documentation
    Allow getDirectoryFiles to operate recursively
0.7
    Change getDirectoryFiles to take a set of file patterns
    Add doesDirectoryExist function
    Add shakeAbbreviations feature