@@ -154,7 +154,7 @@ tyFunction = mkDataType "Development.Shake.Types.Function" []
 data Verbosity
     = Silent -- ^ Don't print any messages.
     | Quiet  -- ^ Only print essential messages, typically errors.
-    | Normal -- ^ Print errors and @# /file-name/ /command-name/@ when running a 'traced' command.
+    | Normal -- ^ Print errors and @# /command-name/ /file-name/@ when running a 'traced' command.
     | Loud   -- ^ Print errors and full command lines when running a 'system'' command.
     | Chatty -- ^ Print errors, full command line and status messages when starting a rule.
     | Diagnostic -- ^ Print messages for virtually everything (mostly for debugging).
