@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Swap how traced messages are printed out
     Add Chatty verbosity, for what was Loud
     Make repeated --verbose keep increasing the verbosity
     If shakeThreads==1 then always use a deterministic pool
